--- a/index.html
+++ b/index.html
@@ -410,6 +410,27 @@
             </li>
           </ul>
         </div>
+
+        <form class="footer-form">
+          <div class="footer-input-wrap">
+            <label for="footer-email" clas="footer-label">Subscribe</label>
+            <input
+              class="footer-input"
+              type="email"
+              id="footer-email"
+              name="footer-email"
+              placeholder="E-mail"
+            />
+          </div>
+          <button type="submit" class="footer-form-btn">
+            Subscribe
+            <span class="subcsribe-icon-span">
+              <svg class="subcsribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-paper-airplane"></use>
+              </svg>
+            </span>
+          </button>
+        </form>
       </div>
     </footer>
 
@@ -420,6 +441,67 @@
             <use href="./images/icons.svg#icon-close-modal"></use>
           </svg>
         </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+
+        <form class="modal-form">
+          <div class="modal-input-wrap">
+            <div class="form-inputs-block">
+              <label for="name" class="modal-label">Name</label>
+              <input type="text" class="modal-input" id="name" name="name" />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+            <div class="form-inputs-block">
+              <label for="phone" class="modal-label">Phone</label>
+              <input type="phone" class="modal-input" id="phone" name="phone" />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+            <div class="form-inputs-block">
+              <label for="email" class="modal-label">Email</label>
+              <input type="email" class="modal-input" id="email" name="email" />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+            <div class="form-inputs-block">
+              <label for="comment" class="modal-label">Comment</label>
+              <textarea
+                class="modal-comment"
+                name="comment"
+                id="comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+          </div>
+         
+            <div class="checkbox-block">
+              <input
+                type="checkbox"
+                id="policy"
+                name="policy"
+                class="visually-hidden policy-checkbox"
+              />
+              <label for="policy" class="policy-label"
+                >
+                <span class="checked-icon-block">
+                <svg class="checked-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+                I accept the terms and conditions of the
+                <a href="" class="policy-link">Privacy Policy</a></label
+              >
+            </span>
+            </div>
+          <div class="modal-btn-wrap"></div>
+            <button type="submit" class="form-send-btn">Send</button>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
