--- a/portfolio.html
+++ b/portfolio.html
@@ -334,6 +334,27 @@
             </li>
           </ul>
         </div>
+
+        <form class="footer-form">
+          <div class="footer-input-wrap">
+            <label for="footer-email" clas="footer-label">Subscribe</label>
+            <input
+              class="footer-input"
+              type="email"
+              id="footer-email"
+              name="footer-email"
+              placeholder="E-mail"
+            />
+          </div>
+          <button type="submit" class="footer-form-btn">
+            Subscribe
+            <span class="subcsribe-icon-span">
+              <svg class="subcsribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-paper-airplane"></use>
+              </svg>
+            </span>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
