--- a/portfolio.html
+++ b/portfolio.html
@@ -337,7 +337,7 @@
 
         <form class="footer-form">
           <div class="footer-input-wrap">
-            <label for="footer-email" clas="footer-label">Subscribe</label>
+            <label for="footer-email" class="footer-label">Subscribe</label>
             <input
               class="footer-input"
               type="email"
