--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
         <form class="footer-form">
           <div class="footer-input-wrap">
-            <label for="footer-email" clas="footer-label">Subscribe</label>
+            <label for="footer-email" class="footer-label">Subscribe</label>
             <input
               class="footer-input"
               type="email"
@@ -430,8 +430,9 @@
               </svg>
             </span>
           </button>
-        </form>
       </div>
+        </form>
+      
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
@@ -456,7 +457,7 @@
             </div>
             <div class="form-inputs-block">
               <label for="phone" class="modal-label">Phone</label>
-              <input type="phone" class="modal-input" id="phone" name="phone" />
+              <input type="tel" class="modal-input" id="phone" name="phone" />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -496,7 +497,6 @@
                 I accept the terms and conditions of the
                 <a href="" class="policy-link">Privacy Policy</a></label
               >
-            </span>
             </div>
           <div class="modal-btn-wrap"></div>
             <button type="submit" class="form-send-btn">Send</button>
