--- a/index.html
+++ b/index.html
@@ -411,26 +411,31 @@
           </ul>
         </div>
 
-        <form class="footer-form">
-          <div class="footer-input-wrap">
-            <label for="footer-email" class="footer-label">Subscribe</label>
-            <input
-              class="footer-input"
-              type="email"
-              id="footer-email"
-              name="footer-email"
-              placeholder="E-mail"
-            />
-          </div>
-          <button type="submit" class="footer-form-btn">
-            Subscribe
-            <span class="subcsribe-icon-span">
-              <svg class="subcsribe-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-paper-airplane"></use>
-              </svg>
-            </span>
-          </button>
-        </form>
+        <div class="footer-form-wraper">
+          <p class="footer-label">Subscribe</p>
+          <form class="footer-form">
+            <div class="footer-input-wrap">
+              <label for="footer-email">
+                <input
+                  class="footer-input"
+                  type="email"
+                  id="footer-email"
+                  name="footer-email"
+                  placeholder="E-mail"
+                />
+              </label>
+
+              <button type="submit" class="footer-form-btn">
+                Subscribe
+                <span class="subcsribe-icon-span">
+                  <svg class="subcsribe-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-paper-airplane"></use>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
 
