--- a/index.html
+++ b/index.html
@@ -414,26 +414,24 @@
         <div class="footer-form-wraper">
           <p class="footer-label">Subscribe</p>
           <form class="footer-form">
-            <div class="footer-input-wrap">
-              <label for="footer-email">
-                <input
-                  class="footer-input"
-                  type="email"
-                  id="footer-email"
-                  name="footer-email"
-                  placeholder="E-mail"
-                />
-              </label>
+            <label for="footer-email">
+              <input
+                class="footer-input"
+                type="email"
+                id="footer-email"
+                name="footer-email"
+                placeholder="E-mail"
+              />
+            </label>
 
-              <button type="submit" class="footer-form-btn">
-                Subscribe
-                <span class="subcsribe-icon-span">
-                  <svg class="subcsribe-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-paper-airplane"></use>
-                  </svg>
-                </span>
-              </button>
-            </div>
+            <button type="submit" class="footer-form-btn">
+              Subscribe
+              <span class="subcsribe-icon-span">
+                <svg class="subcsribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-paper-airplane"></use>
+                </svg>
+              </span>
+            </button>
           </form>
         </div>
       </div>
@@ -452,14 +450,21 @@
 
         <form class="modal-form">
           <div class="modal-input-wrap">
-            <label for="name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="form-inputs-block">
-              <input type="text" class="modal-input" id="name" name="name" />
+              <input
+                type="text"
+                class="modal-input"
+                id="user-name"
+                name="user-name"
+              />
               <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
+            </div>
 
+            <div class="modal-input-wrap">
             <label for="phone" class="modal-label">Phone</label>
             <div class="form-inputs-block">
               <input type="tel" class="modal-input" id="phone" name="phone" />
@@ -468,6 +473,8 @@
               </svg>
             </div>
 
+            <div>
+            <div class="modal-input-wrap">
             <label for="email" class="modal-label">Email</label>
             <div class="form-inputs-block">
               <input type="email" class="modal-input" id="email" name="email" />
@@ -475,7 +482,9 @@
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
+          </div>
 
+          <div class="modal-input-wrap">
             <label for="comment" class="modal-label">Comment</label>
             <textarea
               class="modal-comment"
@@ -483,6 +492,7 @@
               id="comment"
               placeholder="Text input"
             ></textarea>
+          </div>
           </div>
 
           <div class="checkbox-block">
