--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-            </div>
+          </div>
 
-            <div class="modal-input-wrap">
+          <div class="modal-input-wrap">
             <label for="phone" class="modal-label">Phone</label>
             <div class="form-inputs-block">
               <input type="tel" class="modal-input" id="phone" name="phone" />
@@ -472,9 +472,9 @@
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
+          </div>
 
-            <div>
-            <div class="modal-input-wrap">
+          <div class="modal-input-wrap">
             <label for="email" class="modal-label">Email</label>
             <div class="form-inputs-block">
               <input type="email" class="modal-input" id="email" name="email" />
@@ -493,16 +493,15 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          </div>
 
           <div class="checkbox-block">
             <input
               type="checkbox"
-              id="policy"
-              name="policy"
+              id="user-privacy"
+              name="user-privacy"
               class="visually-hidden policy-checkbox"
             />
-            <label for="policy" class="policy-label">
+            <label for="user-privacy" class="policy-label" value="true">
               <span class="checked-icon-block">
                 <svg class="checked-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
