--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
               class="visually-hidden policy-checkbox"
               value="true"
             />
-            <label for="user-privacy" class="policy-label" value="true">
+            <label for="user-privacy" class="policy-label">
               <span class="checked-icon-block">
                 <svg class="checked-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
