--- a/portfolio.html
+++ b/portfolio.html
@@ -335,26 +335,27 @@
           </ul>
         </div>
 
-        <form class="footer-form">
-          <div class="footer-input-wrap">
-            <label for="footer-email" class="footer-label">Subscribe</label>
-            <input
-              class="footer-input"
-              type="email"
-              id="footer-email"
-              name="footer-email"
-              placeholder="E-mail"
-            />
-          </div>
-          <button type="submit" class="footer-form-btn">
-            Subscribe
-            <span class="subcsribe-icon-span">
+        <div class="footer-form-wraper">
+          <p class="footer-form-caption">Subscribe</p>
+          <form class="footer-form">
+            <label for="footer-email" class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                id="footer-email"
+                name="footer-email"
+                placeholder="E-mail"
+              />
+            </label>
+
+            <button type="submit" class="footer-form-btn">
+              Subscribe
               <svg class="subcsribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-paper-airplane"></use>
               </svg>
-            </span>
-          </button>
-        </form>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
